<package format="2">
  <name>flir_lepton_driver</name>
  <version>0.0.0</version>
  <description>
  ROS driver for the FLIR Lepton thermal camera
  </description>
  <maintainer email="flanagan.j@northeastern.edu">James Flanagan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
